<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextSite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/site"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="322dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />

        <Button
            android:id="@+id/generatePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/key" />
    </LinearLayout>
</LinearLayout>