<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/introText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro_registered"
            android:textColor="@color/background"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/confirmPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingTop="20dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            tools:targetApi="o" />

    </LinearLayout>
</ScrollView>
