<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/siteTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/site"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/siteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/site"
        android:paddingLeft="3dp"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/usernameTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/username"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="359dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" android:text="@string/username"
            android:paddingLeft="3dp"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <Button
            android:id="@+id/copyUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/copy" />
    </LinearLayout>

    <TextView
        android:id="@+id/passwordTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/password"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="359dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="3dp"
            android:text="@string/password"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <Button
            android:id="@+id/copyPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/copy" />
    </LinearLayout>

</LinearLayout>